# swyt

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
test_data/invalid_config/: config.jbb
test_data/invalid_rules/: rules.jbb
test_data/valid_config/: config.jbb
test_data/valid_rules/: rules.jbb
