[package]
name = "swyt"
version = "0.1.0"
authors = ["Clément Sibille <clement.sibille@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
chrono = "0.4.11"
psutil = "3.1.0"
log = "0.4.8"
env_logger = "0.7.1"
