[package]
name = "swyt"
description = "Daemon killing processes based on time period rules"
license = "MIT"
version = "1.2.0"
authors = ["Clément Sibille <clement.sibille@protonmail.com>"]
repository = "https://github.com/Lisible/swyt/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
chrono = "0.4.11"
heim = { version="0.0.10", features = ["process", "runtime-polyfill"]}
futures = "0.3.5"
log = "0.4.8"
env_logger = "0.7.1"
